tests/negative/typecheck/addrof_type.orng
// addrof_type.orng:6:22: error: error: expected a compile-time constant type, got addr_of
//     const X: Type = &4
//                     ^
// 
fn main() -> Int {
    const X: Type = &4
    0
}